# selfPro

./: README.md  exit
backend/: ..env.swp  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  entrypoint.sh  manage.py  pyproject.toml
backend/core/api/: README.markdown  filters.py  schemas.py  urls.py
backend/core/api/v1/: urls.py
backend/core/api/v1/intensives/: README.markdown  filters.py  handlers.py  schemas.py
backend/core/api/v1/users/: handlers.py  schemas.py
backend/core/apps/: README.markdown
backend/core/apps/common/: README.markdown  exceptions.py  models.py
backend/core/apps/intensives/: README.markdown  admin.py  apps.py
backend/core/apps/intensives/entities/: intensives.py
backend/core/apps/intensives/migrations/: 0001_initial.py
backend/core/apps/intensives/models/: __init__.py  intensives.py
backend/core/apps/intensives/services/: intensive.py
backend/core/apps/users/: admin.py  apps.py  entities.py  models.py
backend/core/apps/users/exceptions/: codes.py
backend/core/apps/users/migrations/: 0001_initial.py  0002_alter_user_phone_alter_user_token.py
backend/core/apps/users/services/: auth.py  codes.py  senders.py  users.py
backend/core/constants/: limits.py
backend/core/selfpro/: asgi.py  urls.py  wsgi.py
backend/core/selfpro/settings/: main.py
backend/docker_compose/: app.yaml  storages.yaml
backend/tests/factories/: intensives.py
backend/tests/services/: conftest.py  test_intensives.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/style/: common.sass  fonts.sass  main.sass  (+3 more)
frontend/src/components/: Header.vue
frontend/src/constans/: router.js
frontend/src/pages/: Auth.vue  History.vue  Intensive.vue  IntensiveAdd.vue  IntensiveDetail.vue  Profile.vue
frontend/src/router/: index.js
frontend/src/scripts/: main.js
frontend/src/stores/: root.js
(+11 files in other folders)
